--- a/analysis-complete-case/analysis-H4.Rmd
+++ b/analysis-complete-case/analysis-H4.Rmd
@@ -78,6 +78,25 @@ dat_primary_aim <- dat_primary_aim %>%
 dat_for_analysis <- dat_primary_aim %>% filter(is_include_main == 1)
 ```
 
+```{r}
+logical_vec_cc <- dat_for_analysis %>% 
+  select(Y, substance_is_any,
+         substance_is_any_nicotine_lead1) %>%
+  complete.cases(.)
+
+dat_summary_observed <- dat_for_analysis %>% 
+  mutate(is_complete = logical_vec_cc) %>% 
+  filter(eligibility_overall_next_dp == 1) %>%
+  group_by(is_complete) %>%
+  summarise(total = n())
+
+dat_summary <- data.frame(n_elig_overall_next_dp = sum(dat_summary_observed[["total"]]),
+                          n_included_among_elig_overall_next_dp = dat_summary_observed[dat_summary_observed[["is_complete"]] == TRUE, ][["total"]],
+                          n_excluded_among_elig_overall_next_dp = dat_summary_observed[dat_summary_observed[["is_complete"]] == FALSE, ][["total"]])
+
+dat_summary
+```
+
 ## Model 0
 
 ```{r}
