--- a/analysis-complete-case/analysis-H2.Rmd
+++ b/analysis-complete-case/analysis-H2.Rmd
@@ -61,14 +61,14 @@ dat_for_analysis <- dat_primary_aim %>%
 #   * none versus low effort
 dat_for_analysis <- dat_for_analysis %>%
   mutate(treatment_cate = case_when(
-    is_low_effort == 1 ~ 0,  # Important note: the value of zero in treatment_cate is used to indicate the reference category to be used. Another important note: we actually want low effort prompt rather than no prompt to be our reference category; therefore, the variable treatment_cate was specified in this way
-    is_high_effort == 1 ~ 1, # This allows us to make the comparison: high effort prompt versus low effort prompt
-    coinflip == 0 ~ 2,       # This allows us to make the comparison: no prompt versus low effort prompt
+    is_low_effort == 1 ~ 2,  # This allows us to make the comparison: low effort prompt versus no prompt
+    is_high_effort == 1 ~ 1, # This allows us to make the comparison: high effort prompt versus no prompt
+    coinflip == 0 ~ 0,       # Important note: the value of zero in treatment_cate is used to indicate the reference category to be used. 
     .default = NULL)) %>%
   mutate(rand_prob = case_when(
-    treatment_cate == 0 ~ 0.25,
+    treatment_cate == 0 ~ 0.50,
     treatment_cate == 1 ~ 0.25,
-    treatment_cate == 2 ~ 0.50,
+    treatment_cate == 2 ~ 0.25,
     .default = NULL))
 
 # rand_prob_A0 is the randomization probability corresponding to the reference category (whatever was coded to take on a value of 0 in treatment_cate)
@@ -115,7 +115,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   # simply set rand_prob_tilde to be equal to the actual randomization probabilities
   # Here, what ever you coded as 0, 1, 2 in treatment_cate
   # specify the randomization probabilities in that order
-  rand_prob_tilde = c(0.25, 0.25, 0.50),  
+  rand_prob_tilde = c(0.50, 0.25, 0.25),  
   estimator_initial_value = NULL,
   Delta = 1,
   # Number of treatment categories (Important note: this must exclude the reference category)
@@ -147,8 +147,8 @@ dat_causal <- data.frame(coefficient = c("beta0", "beta1"),
 ```{r}
 orig_row_names <- row.names(dat_causal)
 new_row_names <- orig_row_names
-new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus Low Effort)")
-new_row_names <- replace(new_row_names, orig_row_names == "2", "No Prompt (versus Low Effort)")
+new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus No Prompt)")
+new_row_names <- replace(new_row_names, orig_row_names == "2", "Low Effort Prompt (versus No Prompt)")
 row.names(dat_causal) <- new_row_names
 ```
 
@@ -161,7 +161,7 @@ fit1_causal <- fit1_results$causal_excursion_effect
 exp_fit1_results <- data.frame(exp_beta = exp(fit1_causal[,"Estimate"]),
                                exp_95LCL = exp(fit1_causal[,"95% LCL"]),
                                exp_95UCL = exp(fit1_causal[,"95% UCL"]))
-row.names(exp_fit1_results) <- c("High Effort (versus Low Effort)", "None (versus Low Effort)")
+row.names(exp_fit1_results) <- c("High Effort Prompt (versus No Prompt)", "Low Effort Prompt (versus No Prompt)")
 exp_fit1_results <- exp_fit1_results %>%
   mutate(exp_beta = round(exp_beta, 3),
          exp_95LCL = round(exp_95LCL, 3),
@@ -215,7 +215,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   # simply set rand_prob_tilde to be equal to the actual randomization probabilities
   # Here, what ever you coded as 0, 1, 2 in treatment_cate
   # specify the randomization probabilities in that order
-  rand_prob_tilde = c(0.25, 0.25, 0.50),  
+  rand_prob_tilde = c(0.50, 0.25, 0.25),  
   estimator_initial_value = NULL,
   Delta = 1,
   # Number of treatment categories (important: this must exclude the reference category)
@@ -246,10 +246,10 @@ dat_causal <- data.frame(coefficient = c("beta0", "beta1","beta2", "beta3"),
 ```{r}
 orig_row_names <- row.names(dat_causal)
 new_row_names <- orig_row_names
-new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus Low Effort)")
-new_row_names <- replace(new_row_names, orig_row_names == "2", "High Effort Prompt (versus Low Effort) x Day in Study")
-new_row_names <- replace(new_row_names, orig_row_names == "3", "No Prompt (versus Low Effort)")
-new_row_names <- replace(new_row_names, orig_row_names == "4", "No Prompt (versus Low Effort) x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus No Prompt)")
+new_row_names <- replace(new_row_names, orig_row_names == "2", "High Effort Prompt (versus No Prompt) x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "3", "Low Effort Prompt (versus No Prompt)")
+new_row_names <- replace(new_row_names, orig_row_names == "4", "Low Effort Prompt (versus No Prompt) x Day in Study")
 row.names(dat_causal) <- new_row_names
 ```
 
@@ -305,7 +305,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   # simply set rand_prob_tilde to be equal to the actual randomization probabilities
   # Here, what ever you coded as 0, 1, 2 in treatment_cate
   # specify the randomization probabilities in that order
-  rand_prob_tilde = c(0.25, 0.25, 0.50),  
+  rand_prob_tilde = c(0.50, 0.25, 0.25),  
   estimator_initial_value = NULL,
   Delta = 1,
   # Number of treatment categories (important: this must exclude the reference category)
@@ -336,12 +336,12 @@ dat_causal <- data.frame(coefficient = c("beta0", "beta1","beta2", "beta3", "bet
 ```{r}
 orig_row_names <- row.names(dat_causal)
 new_row_names <- orig_row_names
-new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus Low Effort)")
-new_row_names <- replace(new_row_names, orig_row_names == "2", "High Effort Prompt (versus Low Effort) x Day in Study")
-new_row_names <- replace(new_row_names, orig_row_names == "3", "High Effort Prompt (versus Low Effort) x Day in Study x Day in Study")
-new_row_names <- replace(new_row_names, orig_row_names == "4", "No Prompt (versus Low Effort)")
-new_row_names <- replace(new_row_names, orig_row_names == "5", "No Prompt (versus Low Effort) x Day in Study")
-new_row_names <- replace(new_row_names, orig_row_names == "6", "No Prompt (versus Low Effort) x Day in Study x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "1", "High Effort Prompt (versus No Prompt)")
+new_row_names <- replace(new_row_names, orig_row_names == "2", "High Effort Prompt (versus No Prompt) x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "3", "High Effort Prompt (versus No Prompt) x Day in Study x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "4", "Low Effort Prompt (versus No Prompt)")
+new_row_names <- replace(new_row_names, orig_row_names == "5", "Low Effort Prompt (versus No Prompt) x Day in Study")
+new_row_names <- replace(new_row_names, orig_row_names == "6", "Low Effort Prompt (versus No Prompt) x Day in Study x Day in Study")
 row.names(dat_causal) <- new_row_names
 ```
 
@@ -385,18 +385,18 @@ dat_for_analysis <- dat_primary_aim %>%
 
 ```{r}
 # We will set up the dataset so that in analysis, we may have the following comparisons:
-#   * high effort versus low effort
-#   * none versus low effort
+#   * high effort prompt versus low effort prompt
+#   * low effort prompt versus no prompt
 dat_for_analysis <- dat_for_analysis %>%
   mutate(treatment_cate = case_when(
-    is_low_effort == 1 ~ 0,  # Important: the value of zero in treatment_cate is used to indicate the reference category to be used
-    is_high_effort == 1 ~ 1, # This allows us to make the comparison: high effort prompt versus low effort prompt
-    coinflip == 0 ~ 2,       # This allows us to make the comparison: no prompt versus low effort prompt
+    is_low_effort == 1 ~ 2,  # This allows us to make the comparison: low effort prompt versus no prompt
+    is_high_effort == 1 ~ 1, # This allows us to make the comparison: high effort prompt versus no prompt
+    coinflip == 0 ~ 0,       # Important note: the value of zero in treatment_cate is used to indicate the reference category to be used. 
     .default = NULL)) %>%
   mutate(rand_prob = case_when(
-    treatment_cate == 0 ~ 0.25,
+    treatment_cate == 0 ~ 0.50,
     treatment_cate == 1 ~ 0.25,
-    treatment_cate == 2 ~ 0.50,
+    treatment_cate == 2 ~ 0.25,
     .default = NULL))
 
 # rand_prob_A0 is the randomization probability corresponding to the reference category (whatever was coded to take on a value of 0 in treatment_cate)
@@ -443,7 +443,7 @@ fit1 <- emee_categorical_trt_with_Delta(
   # simply set rand_prob_tilde to be equal to the actual randomization probabilities
   # Here, what ever you coded as 0, 1, 2 in treatment_cate
   # specify the randomization probabilities in that order
-  rand_prob_tilde = c(0.25, 0.25, 0.50),  
+  rand_prob_tilde = c(0.50, 0.25, 0.25),  
   estimator_initial_value = NULL,
   Delta = 1,
   # Number of treatment categories (important: this must exclude the reference category)
