--- a/analysis-complete-case/analysis-H2.Rmd
+++ b/analysis-complete-case/analysis-H2.Rmd
@@ -240,6 +240,7 @@ dat_causal <- data.frame(coefficient = c("beta0", "beta1","beta2", "beta3"),
                           UCL95 = round(fit1_causal[,"95% UCL"], 3),
                           SE = round(fit1_causal[,"StdErr"], 3),
                           HotellingT = round(fit1_causal[,"t_value"], 3),
+                          df = round(fit1_causal[, "df"], 3),
                           p = round(fit1_causal[,"p-value"], 3))
 ```
 
@@ -264,6 +265,7 @@ dat_control <- data.frame(coefficient = paste("alpha", 0:(length(fit1_control[,"
                           UCL95 = round(fit1_control[,"95% UCL"], 3),
                           SE = round(fit1_control[,"StdErr"], 3),
                           HotellingT = round(fit1_control[,"t_value"], 3),
+                          df = round(fit1_control[,"df"], 3),
                           p = round(fit1_control[,"p-value"], 3))
 ```
 
@@ -325,12 +327,13 @@ fit1_control <- fit1_results$control_variables
 
 ```{r}
 dat_causal <- data.frame(coefficient = c("beta0", "beta1","beta2", "beta3", "beta4", "beta5"),
-                          estimate = round(fit1_causal[,"Estimate"], 3),
-                          LCL95 = round(fit1_causal[,"95% LCL"], 3),
-                          UCL95 = round(fit1_causal[,"95% UCL"], 3),
-                          SE = round(fit1_causal[,"StdErr"], 3),
-                          HotellingT = round(fit1_causal[,"t_value"], 3),
-                          p = round(fit1_causal[,"p-value"], 3))
+                         estimate = round(fit1_causal[,"Estimate"], 3),
+                         LCL95 = round(fit1_causal[,"95% LCL"], 3),
+                         UCL95 = round(fit1_causal[,"95% UCL"], 3),
+                         SE = round(fit1_causal[,"StdErr"], 3),
+                         HotellingT = round(fit1_causal[,"t_value"], 3),
+                         df = round(fit1_causal[, "df"], 3),
+                         p = round(fit1_causal[,"p-value"], 3))
 ```
 
 ```{r}
@@ -356,6 +359,7 @@ dat_control <- data.frame(coefficient = paste("alpha", 0:(length(fit1_control[,"
                           UCL95 = round(fit1_control[,"95% UCL"], 3),
                           SE = round(fit1_control[,"StdErr"], 3),
                           HotellingT = round(fit1_control[,"t_value"], 3),
+                          df = round(fit1_control[,"df"], 3),
                           p = round(fit1_control[,"p-value"], 3))
 ```
 
@@ -468,6 +472,7 @@ dat_causal <- data.frame(coefficient = c("beta0", "beta1"),
                           UCL95 = round(fit1_causal[,"95% UCL"], 3),
                           SE = round(fit1_causal[,"StdErr"], 3),
                           HotellingT = round(fit1_causal[,"t_value"], 3),
+                          df = round(fit1_causal[, "df"], 3),
                           p = round(fit1_causal[,"p-value"], 3))
 ```
 
@@ -508,6 +513,7 @@ dat_control <- data.frame(coefficient = paste("alpha", 0:(length(fit1_control[,"
                           UCL95 = round(fit1_control[,"95% UCL"], 3),
                           SE = round(fit1_control[,"StdErr"], 3),
                           HotellingT = round(fit1_control[,"t_value"], 3),
+                          df = round(fit1_control[,"df"], 3),
                           p = round(fit1_control[,"p-value"], 3))
 ```
 
